# launch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
launch/: CMakeLists.txt  test.cpp
launch/include/: framework.hpp  launch.hpp  launcher.hpp  launcher_def.hpp  policy.hpp
launch/include/detail/: launch.hpp  launcher_detail.hpp
